# LSPlt

./: build.gradle.kts  settings.gradle.kts
lsplt/: build.gradle.kts
lsplt/src/main/jni/: elf_util.cc  elf_util.hpp  lsplt.cc  syscall.hpp
lsplt/src/main/jni/include/: lsplt.hpp
src/: CMakeLists.txt  elf_util.cc  elf_util.hpp  lsplt.cc  syscall.hpp
src/include/: lsplt.hpp
test/: build.gradle.kts
